--- a/src/styles/overrides/prose.css
+++ b/src/styles/overrides/prose.css
@@ -74,7 +74,7 @@
     @media (width < 90ch) {
       grid-column: full;
     }
-    * {
+    & > * {
       grid-column: content;
     }
     /* consecutive pre's get joined */
